# faster_zdc

./: pyproject.toml
zdc/architectures/: conv.py  transformer.py  unet.py
zdc/layers/: __init__.py  conv.py  patch.py  quantization.py  transformer.py  utils.py
zdc/models/: __init__.py
zdc/models/autoencoder/: variational.py
zdc/models/channels/: gboost.py  knn.py  linear_regression.py  mlp.py  sklearn_utils.py  svm.py  tree.py
zdc/models/flow_matching/: flow_matching.py  latent_flow_matching.py
zdc/models/gan/: vgg_discriminator.py
zdc/models/mlp/: mlp.py
zdc/models/quantization/: gpt.py  vq_gan.py  vq_vae_cond.py  vq_vae_gen.py
zdc/scripts/: hyperparameter_tuning.py
zdc/utils/: data.py  grad.py  losses.py  metrics.py  nn.py  train.py
